# SlicerMitralValve

./: .gitignore  CMakeLists.txt  LICENSE  README.md
BiplaneRegistration/: BiplaneRegistration.py  CMakeLists.txt
MVModeller/: CMakeLists.txt  qSlicerMVModellerModule.cxx  qSlicerMVModellerModule.h  qSlicerMVModellerModuleWidget.cxx  qSlicerMVModellerModuleWidget.h
MVModeller/Logic/: CMakeLists.txt  vtkSlicerMVModellerLogic.cxx  vtkSlicerMVModellerLogic.h
MVModeller/MRML/: CMakeLists.txt
MVModeller/Resources/: qSlicerMVModellerModule.qrc
MVModeller/Resources/UI/: qSlicerMVModellerFooBarWidget.ui  qSlicerMVModellerMVOpeningWidget.ui  qSlicerMVModellerModuleWidget.ui  qSlicerMVModellerPlaneStepWidget.ui
MVModeller/Widgets/: CMakeLists.txt  qSlicerMVModellerFooBarWidget.cxx  qSlicerMVModellerFooBarWidget.h  qSlicerMVModellerMVOpeningWidget.cxx  qSlicerMVModellerMVOpeningWidget.h  qSlicerMVModellerPlaneStepWidget.cxx  qSlicerMVModellerPlaneStepWidget.h
MVSegmenter/: CMakeLists.txt  MVSegmenter.py
MVSegmenter/Resources/: moldBasePlate.stl
